--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,61 @@
-theme: jekyll-theme-cayman
+# Site
+repository: ZohebAbai/ZohebAbai.github.io
+favicon: images/favicon.png
+
+# Personal info
+name: Anil Chandra Naidu Matcha
+title: Senior Research Engineer
+email: matcha72@gmail.com
+website: https://www.linkedin.com/in/anilmatcha/
+
+# Social links
+#twitter_username: facespics
+github_username:  Anil-matcha
+linkedin_username: anilmatcha
+#kaggle_username: matcha
+
+# About Section
+# about_title: About Me
+about_profile_image: images/profile.jpg
+about_content: | # this will include new lines to allow paragraphs
+  Currently working as a senior engineer in Samsung R&D providing visual intelligence to Samsung camera.Have 4+ years experience in deep learning, computer vision and machine learning.Worked with CNN, RNN, LSTM, GAN, VAE.Well versed with latest developments in machine learning.Have experienced working through the lifecycle of the product and completing projects from scratch. 
+  
+  I am most skilled in : 
+    - <mark>Deep Learning</mark>
+    - <mark>Machine Learning</mark>
+    - <mark>Statistics</mark>
+    - <mark>Problem Solving, Critical and Creative thinking</mark>
+    - <mark>Programming with a scientific background</mark>
+
+# Projects Section
+# projects_title: Projects
+
+# Experience Section
+# experience_title: Experience
+
+# Education Section
+# educaton_title: Education
+
+# More Section
+# more_title: A Little More About Me
+more_content: | # this will include new lines to allow paragraphs
+  Alongside working on Projects I am an Active Learner:
+   #- [List of MOOCs attended]()
+   - [Medium Profile](https://medium.com/@shaktimaan)
+   - Blogs 
+  
+  The spirit that drives me everyday : <mark>"The first principle is that you must not fool yourself and you are the easiest person to fool."</mark> - Richard P. Feynman
+
+# Footer
+footer_show_references: false
+
+# Build settings
+#theme: modern-resume-theme
+remote_theme: sproogen/modern-resume-theme
+
+sass:
+  sass_dir: _sass
+  style: compressed
+
+plugins:
+ - jekyll-seo-tag
