--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-repository: ZohebAbai/ZohebAbai.github.io
+repository: Anil-matcha/Anil-matcha.github.io
 favicon: images/favicon.png
 
 # Personal info
